# dico

./: .gitignore  .gitmodules  DISTFILES  GNUmakefile  Makefile.am  NEWS  README  README-alpha  README-hacking  bootstrap  configure.boot
am/: gsasl.m4  lib.m4  testdir.m4
dico/: Makefile.am  autologin.c  cmdline.opt  connect.c  dico-priv.h  dico.c  func.c  lookup.c  pager.c  saslauth.c  shell.c
dicod/: Makefile.am  accesslog.c  acl.c  alias.c  auth.c  capa.c  ckpass.c  cmdline.opt  commands.c  database.c  dbtext.c  dicod.c  dicod.h  gsasl.c  ident.c  lang.c  lev.c  lint.c  loader.c  main.c  markup.c  mime.c  ostream.c  pp-setup  regex.c  result.c  server.c  stat.c  stratcl.c  virtual.c  xidle.c  xversion.c
dicoweb/: .dockerignore  .gitignore  .pylintrc  INSTALL.md  dummy_translations.py  manage.py  pyproject.toml  requirements.txt  settings_sample.py  urls.py  views.py  wsgi.py
dicoweb/assets/: dicoweb.css  dicoweb.js
dicoweb/conf/docker/etc/: supervisord.conf
dicoweb/conf/docker/etc/nginx/sites-enabled/: default
dicoweb/dicoclient/: __init__.py  dicoclient.py  dicoshell.py  setup.py
dicoweb/templates/: base.html  index.html  opensearch.xml
dicoweb/templatetags/: br2para.py  dictlookup.py
doc/: .gitignore  Makefile.am  dico.1  dico.texi  dicod.8in  dicod.conf.5in  gendocs.pl  html.init  libdico.texi  proto.texi  strat.texi  webdoc.init
examples/: Makefile.am  glossary.scm  listdict.scm  textdict.py
include/: Makefile.am  appi18n.h  dico.h  dict.h  gsaslstr.h  libi18n.h  testsuite.inc  xdico.h
lib/: Makefile.am  argcv.c  assoc.c  base64.c  conv.c  (+30 more)
(+298 files in other folders)
